--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,23 @@
     transform: rotate(360deg);
   }
 }
+
+.Button {
+  background-color: mediumpurple;
+  display: flex;
+  border-radius: 5px;
+  align-items: center;
+  justify-content: center;
+  font-family: "Times New Roman", serif;
+  padding:  10px 60px;
+  outline: 0;
+  box-shadow: 0px 2px 2px lightgrey;
+  text-transform: uppercase;
+  cursor: pointer;
+  transition: ease background-color 250ms;
+  margin: 10px 0px;
+  &:hover {
+    background-color: #8760d9;
+  }
+}
+
