Added connections to ninjaAPI

--- a/src/crossword/Crucigrama.css
+++ b/src/crossword/Crucigrama.css
@@ -20,3 +20,9 @@
 .MainBody {
     background-color: lightgrey;
 }
+
+.p {
+    font-family: "Times New Roman", serif;
+    color: indigo;
+    font-size: large;
+}
